compiler/fabc_parser/src/ast/init/story/part/element/snapshots/fabc_parser__ast__init__story__part__element__narration__tests__parses_narration_with_properties.snap
---
source: compiler/fabc_parser/src/ast/init/story/part/element/narration.rs
expression: narration
---
NarrationElement {
    info: NodeInfo {
        id: 6,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                54,
            ),
        },
    },
    quote: QuoteDecl {
        info: NodeInfo {
            id: 5,
            span: Span {
                start: LineCol(
                    1,
                    3,
                ),
                end: LineCol(
                    1,
                    54,
                ),
            },
        },
        text: "This is a narration.",
        properties: Some(
            ObjectDecl {
                info: NodeInfo {
                    id: 4,
                    span: Span {
                        start: LineCol(
                            1,
                            26,
                        ),
                        end: LineCol(
                            1,
                            54,
                        ),
                    },
                },
                map: {
                    "mood": Primary {
                        info: NodeInfo {
                            id: 1,
                            span: Span {
                                start: LineCol(
                                    1,
                                    34,
                                ),
                                end: LineCol(
                                    1,
                                    38,
                                ),
                            },
                        },
                        value: Primitive(
                            Identifier {
                                info: NodeInfo {
                                    id: 0,
                                    span: Span {
                                        start: LineCol(
                                            1,
                                            34,
                                        ),
                                        end: LineCol(
                                            1,
                                            38,
                                        ),
                                    },
                                },
                                name: "happy",
                            },
                        ),
                    },
                    "volume": Primary {
                        info: NodeInfo {
                            id: 3,
                            span: Span {
                                start: LineCol(
                                    1,
                                    49,
                                ),
                                end: LineCol(
                                    1,
                                    52,
                                ),
                            },
                        },
                        value: Primitive(
                            Identifier {
                                info: NodeInfo {
                                    id: 2,
                                    span: Span {
                                        start: LineCol(
                                            1,
                                            49,
                                        ),
                                        end: LineCol(
                                            1,
                                            52,
                                        ),
                                    },
                                },
                                name: "loud",
                            },
                        ),
                    },
                },
            },
        ),
    },
}
