compiler/fabc_parser/src/ast/init/story/part/element/snapshots/fabc_parser__ast__init__story__part__element__narration__tests__parses_narration_without_properties.snap
---
source: compiler/fabc_parser/src/ast/init/story/part/element/narration.rs
expression: narration
---
NarrationElement {
    info: NodeInfo {
        id: 1,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                24,
            ),
        },
    },
    quote: QuoteDecl {
        info: NodeInfo {
            id: 0,
            span: Span {
                start: LineCol(
                    1,
                    3,
                ),
                end: LineCol(
                    1,
                    24,
                ),
            },
        },
        text: "This is a narration.",
        properties: None,
    },
}
